Make sure properties with very long names are wrapped and do not overflow.

--- a/src/css/elements/autonomous/lists/property-list-item.css
+++ b/src/css/elements/autonomous/lists/property-list-item.css
@@ -6,9 +6,7 @@
 }
 
 .property-list-item__label {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  text-align: center;
 }
 
 .property-list-item__remove-button {
